Correcciones dialogos signatureFields y Position
git-svn-id: https://services.zylk.net/sinadura-repo/sinadura/sinaduraDesktop/trunk@825 3279b7b3-46a5-0410-b095-b22bd0dda68d